adjusted top margin to 2% on the signup form. in production the 'login' link was being cut off. this should fix

--- a/src/App.css
+++ b/src/App.css
@@ -136,5 +136,14 @@ html, body {
     width: 20%;
   }
 
+  /* signup form container mobile styling  */
+
+  #signUpFormContainer{
+    margin-top: 2%;
+
+  }
+
+  /* signup form container mobile styling  */
+
 
 }
